<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_takuna2"
    tools:context=".LoginTakunaActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="115dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_takuna"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoLogin"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/radio_a_treqer"
        android:gravity="center"
        android:text="@string/mensajeInicioLogin"
        android:textColor="@color/titulos_subtitulos_registro_login_app"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/red_hat_display_regular"
        android:text="@string/iniciarSesion"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInfoLogin" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="13dp"
        app:cardBackgroundColor="@color/fondo_cardview_login_registro"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIniciarSesion">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/placeholder_login_registro"
            android:fontFamily="@font/red_hat_display_regular"
            android:hint="@string/placeholderCorreoLogin"
            android:textColor="@color/placeholder_login_registro"
            android:textColorHint="@color/placeholder_login_registro"
            android:textSize="24dp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvClave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="17dp"
        app:cardBackgroundColor="@color/fondo_cardview_login_registro"
        app:cardCornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvCorreoElectronico">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/placeholder_login_registro"
            android:fontFamily="@font/red_hat_display_regular"
            android:hint="@string/placeholderClaveLogin"
            android:textColor="@color/placeholder_login_registro"
            android:textColorHint="@color/placeholder_login_registro"
            android:textSize="24dp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvOlvidarClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/red_hat_display_light_italic"
        android:text="@string/olvidarClave"
        android:textColor="@color/links_login_registro_app"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvClave" />

    <View
        android:id="@+id/viewOlvidarClave"
        android:layout_width="220dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/links_login_registro_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOlvidarClave" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/iniciarSesion"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/my_button_bg"
        android:textColor="@color/links_login_registro_app"
        android:textSize="20sp"
        app:backgroundTint="@color/boton_login_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewOlvidarClave" />

    <TextView
        android:id="@+id/tvNoCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/red_hat_display_bold"
        android:text="@string/noTienesCuenta"
        android:textColor="@color/links_login_registro_app"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

    <TextView
        android:id="@+id/tvRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/red_hat_display_light_italic"
        android:text="@string/linkRegistro"
        android:textColor="@color/links_login_registro_app"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tvNoCuenta"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

    <View
        android:layout_width="122dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="43dp"
        android:background="@color/links_login_registro_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistrarse" />


</androidx.constraintlayout.widget.ConstraintLayout>